# run-ai-report

./: README.md  pyproject.toml
src/jira_insight/: jira_client.py  main.py  timeutils.py
src/main/: jira_client.py  main.py  timeutils.py
