[project]
name = "run-ai-report"
version = "0.1.0"
description = ""
authors = [
    {name = "TobiasAagaard",email = "tach@trifork.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "atlassian-python-api (>=4.0.7,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
